# cli-grpc

./: Cargo.toml
src/: main.rs
src/remotecli/: client.rs  mod.rs  server.rs
