[package]
name = "cli-grpc-tonic-blocking"
version = "0.1.0"
edition = "2018"
description = "https://tjtelan.com/blog/lets-build-a-single-binary-grpc-server-client-with-rust-in-2020/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gRPC server/client
tonic = "0.3.0"
prost = "0.6"
# CLI
structopt = "0.3"
# Async runtime
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
# protobuf->Rust compiler
tonic-build = "0.3.0"
